#3189 - Group visibility description + edit post status label fix

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
@@ -184,6 +184,10 @@
 		display: inline-block;
 		font-weight: 500;
 		margin: 0 0 5px;
+
+		i {
+			margin: 0 0 0 5px;
+		}
 	}
 
 	.privacy-sub-label {
